# FileOrganization

./: .gitignore  AVLFile.cpp  README.md  main.py  master  requirements.txt  test.py
backend/: CMakeLists.txt
backend/include/: avl.h  employee.h  employee_EH.h  employee_avl.h  employee_sequential.h  extendible.h  game.h  game_avl.h  game_sequential.h  games_EH  games_EH.h  logger.h  record.h  record_sequential.h  sequential_file.h  structures.h  utils.h
backend/src/: avl.cpp  avl_handler.cpp  extendible_handler.cpp  main.cpp  sequential_handler.cpp
frontend/: frontend.py  parser.py
frontend/frontend./: frontend.py
